# cisco-pnp-server

./: pyproject.toml
cisco_pnp_server/: main.py
cisco_pnp_server/configs/: test.cfg
cisco_pnp_server/templates/: bye.xml  device_info.xml  load_config.xml
