[tool.poetry]
name = "cisco-pnp-server"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
lxml = "^4.3"
xmltodict = "^0.12.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"
ipython = "^7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
